--- a/index.html
+++ b/index.html
@@ -5,40 +5,64 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Portfolio skeleton</title>
-  <link rel="stylesheet" href="style.css">
+  <title>My Portfolio</title>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
+
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet"/>
 </head>
+<main class="background-image background-color"></main>
+<header>
+  <nav class="nav nav-pills bg-light flex-column space-between flex-md-row">
+  <a class="flex-sm-fill text-bg-light-sm-left p-3" aria-current="page" href="#">My Logo</a>
+  <a class="flex-end-sm-fill text-bg-light-sm-right p-3"><img class="menu" src="./images/IconMenu.svg" alt="ham"></a>
+</nav>
+<div class="col cols-6">
+<h1 class="row-2 h1 text-left m-sm-5">I'm Andy.<br>Glad to see you! </h1>
+<p class="row-2 p text-left m-sm-5">I’m a software developer! I can help you build a product , feature or website Look through<br>
+  some of my work and experience! If you like what you see and have a project you need<br> coded, don’t hestiate to contact me.</p>
+</div>
+<div class="h6 m-sm-5">LET'S CONNECT</div>
+<ul class="list-inline-item m-sm-3">
+<li class="list-inline-item"><img src="./images/twitter.svg" alt="Twitter"/></li>
+<li class="list-inline-item"><img src="./images/linkedin.svg" alt="Linkedin"/></li>
+<li class="list-inline-item"><img src="./images/m.svg" alt="M"/></li>
+<li class="list-inline-item"><img src="./images/github.svg" alt="GitHub"/></li>
+<li class="list-inline-item"><img src="./images/vector.svg" alt="V"/></li>
+</ul>
+</header>
+<section class="container">
+<article class="col-lg-8">
+  <div class="card w-75">
+    <div class="card-body flex col">
+      <h5 class="card-title">Tonic</h5>
+<ul class="list-inline-item">
+<li class="list-inline-item text-black">CANOPY</li>
+<li class="span list-inline-item"><img src="./images/counter.png" alt="dot"/></li>
+<li class="list-inline-item text-black-50">Back End Dev</li>
+<li class="span list-inline-item"><img src="./images/counter.png" alt="dot"/></li>
+<li class="list-inline-item"></li>
+</ul>
+      <p class="card-text">A daily selection of privately personalized reads; no accounts<br>
+         or sign-ups required.</p>
+      <a href="#" class="btn btn-primary">See project</a>
+    </div>
+  </div>
+
+
+
+</article>
+</section>
+
 
 <body>
-  <main>
-      <header>
-         <nav class="navbar">
-        <div class="menu-ham">
 
-            <img src="images/icon-menu.svg" alt="ham icon menu"/>
-          </div>
-        </nav>
-      </header>
-      
-      <section class="intro">
 
-        <div>
-          <h1 class="name">Charlie Giorgania</h1>
-          <p class="intro-text">
-            Hello! I am a software developer! I can help you build a product, feature or website. Take a look of my
-            works.
-            If you like what you see and have a project you need coded, don’t hesitate and contact me.
-          </p>
-        </div>
-        <div class="start-collab-box">
-        <button type="button">Start collaboration</button>
-        </div>
-          <div class="art">
-          </div>
-         </section>
+
       </main>
+
+<script src="js/bootstrap.css"></script>
    </body>
 
 </html>
