add index.html :header & :card

--- a/index.html
+++ b/index.html
@@ -13,18 +13,23 @@
   <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet"/>
 </head>
 <main class="background-image background-color"></main>
-<header>
+<header class="">
   <nav class="nav nav-pills bg-light flex-column space-between flex-md-row">
   <a class="flex-sm-fill text-bg-light-sm-left p-3" aria-current="page" href="#">My Logo</a>
   <a class="flex-end-sm-fill text-bg-light-sm-right p-3"><img class="menu" src="./images/IconMenu.svg" alt="ham"></a>
 </nav>
-<div class="col cols-6">
-<h1 class="row-2 h1 text-left m-sm-5">I'm Andy.<br>Glad to see you! </h1>
-<p class="row-2 p text-left m-sm-5">I’m a software developer! I can help you build a product , feature or website Look through<br>
-  some of my work and experience! If you like what you see and have a project you need<br> coded, don’t hestiate to contact me.</p>
-</div>
-<div class="h6 m-sm-5">LET'S CONNECT</div>
-<ul class="list-inline-item m-sm-3">
+<section class="bg-light text-dark p-5 text-justify">
+  <div class="container">
+  <div>
+  <h1> I’m Andy<br> glad to see you!</h1>
+  </div>
+  <div>
+  <P class="lead">I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</P>
+  </div>
+
+  </div>
+<div class="h6 m-2" >LET'S CONNECT</div>
+<ul class="list-inline-item p-2">
 <li class="list-inline-item"><img src="./images/twitter.svg" alt="Twitter"/></li>
 <li class="list-inline-item"><img src="./images/linkedin.svg" alt="Linkedin"/></li>
 <li class="list-inline-item"><img src="./images/m.svg" alt="M"/></li>
@@ -32,9 +37,10 @@
 <li class="list-inline-item"><img src="./images/vector.svg" alt="V"/></li>
 </ul>
 </header>
+<body>
 <section class="container">
 <article class="col-lg-8">
-  <div class="card w-75">
+  <div class="card w-100">
     <div class="card-body flex col">
       <h5 class="card-title">Tonic</h5>
 <ul class="list-inline-item">
@@ -42,7 +48,7 @@
 <li class="span list-inline-item"><img src="./images/counter.png" alt="dot"/></li>
 <li class="list-inline-item text-black-50">Back End Dev</li>
 <li class="span list-inline-item"><img src="./images/counter.png" alt="dot"/></li>
-<li class="list-inline-item"></li>
+<li class="list-inline-item text-black-50">2015</li>
 </ul>
       <p class="card-text">A daily selection of privately personalized reads; no accounts<br>
          or sign-ups required.</p>
@@ -51,11 +57,12 @@
   </div>
 
 
+
 </article>
 </section>
 
 
-<body>
+
 
 
 
