edit index.html :card section

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,10 +14,9 @@
   <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet"/>
 </head>
 
-<body>
-<main class="background-image background-color">
-<header>
-<header class="">
+<header class="bg-image">
+
+
   <nav class="nav nav-pills bg-light flex-column space-between flex-md-row">
   <a class="flex-sm-fill text-bg-light-sm-left p-3" aria-current="page" href="#">My Logo</a>
   <a class="flex-end-sm-fill text-bg-light-sm-right p-3"><img class="menu" src="./images/IconMenu.svg" alt="ham"></a>
@@ -35,16 +35,20 @@
 <li class="list-inline-item ms-2"><img src="./images/github.svg" alt="GitHub"/></li>
 <li class="list-inline-item ms-2"><img src="./images/vector.svg" alt="V"/></li>
 </ul>
+
+
 </header>
-<section class="bg-light text-dark p-5 text-justify">
 <body>
 
+
+
 <section class="container">
-<article class="">
+<article class="mt-5">
   <div class="card w-100%">
     <div class="card-body d-flex flex-row">
       <img src="./images/snapshoot-portfolio.svg" alt="portfolio images">
-      <section class="d-flex flex-column justify-content-xl-end">
+
+      <div class="d-flex flex-column justify-content-ms-end">
       <h5 class="card-title ms-4">Tonic</h5>
 <ul class="list-inline-itemt">
 <li class="list-inline-item text-black">CANOPY</li>
@@ -58,21 +62,105 @@
          <ul class="list-inline-item">
            <li class="list-inline-item"><img src="images/html.png" alt="html"></li>
            <li class="list-inline-item"><img src="images/css.png" alt="css"></li>
-           <li class="list-inline-item"><img src="images/javaScript.png" alt="js"></li>
+           <li class="list-inline-item"><img src="images/javascript.png" alt="js"></li>
          </ul>
-      <button class="btn btn-primary col-4 ms-4">See project</button>
-      </section>
+      <button type="button" class="btn btn-primary col-4 ms-4">See project</button>
+        </div>
     </div>
   </div>
-
-
-
 </article>
+
+<article class="mt-5">
+  <div class="card w-100%">
+    <div class="card-body d-flex flex-row">
+
+
+      <div class="d-flex flex-column justify-content-ms-start">
+      <h5 class="card-title ms-4">Multi-Post Stories</h5>
+<ul class="list-inline-item">
+<li class="list-inline-item text-black">FACEBOOK</li>
+<li class="list-inline-item"><img src="./images/counter.png" alt="dot"/></li>
+<li class="list-inline-item text-black-50">Full Stack Dev</li>
+<li class="span list-inline-item"><img src="./images/counter.png" alt="dot"/></li>
+<li class="list-inline-item text-black-50">2015</li>
+</ul>
+      <p class="card-text ms-4">Experimental content creation feature that allows users to<br>
+        add to an existing story over the course of a day without<br>
+         spamming their friends.</p>
+         <ul class="list-inline-item">
+           <li class="list-inline-item"><img src="images/html.png" alt="html"></li>
+           <li class="list-inline-item"><img src="images/css.png" alt="css"></li>
+           <li class="list-inline-item"><img src="images/javascript.png" alt="js"></li>
+         </ul>
+      <button type="button" class="btn btn-primary col-4 ms-4">See project</button>
+        </div>
+        <img src="./images/snapshootportfolio4.png" alt="portfolio images2">
+    </div>
+
+  </div>
+</article>
+
+<article class="mt-5">
+  <div class="card w-100%">
+    <div class="card-body d-flex flex-row">
+      <img src="./images/snapshoot-portfolio.svg" alt="portfolio images3">
+
+      <div class="d-flex flex-column justify-content-ms-end">
+      <h5 class="card-title ms-4">Tonic</h5>
+<ul class="list-inline-itemt">
+<li class="list-inline-item text-black">CANOPY</li>
+<li class="list-inline-item"><img src="./images/counter.png" alt="dot"/></li>
+<li class="list-inline-item text-black-50">Back End Dev</li>
+<li class="span list-inline-item"><img src="./images/counter.png" alt="dot"/></li>
+<li class="list-inline-item text-black-50">2015</li>
+</ul>
+      <p class="card-text ms-4">A daily selection of privately personalized reads; no accounts<br>
+         or sign-ups required.</p>
+         <ul class="list-inline-item">
+           <li class="list-inline-item"><img src="images/html.png" alt="html"></li>
+           <li class="list-inline-item"><img src="images/css.png" alt="css"></li>
+           <li class="list-inline-item"><img src="images/javascript.png" alt="js"></li>
+         </ul>
+      <button type="button" class="btn btn-primary col-4 ms-4">See project</button>
+        </div>
+    </div>
+  </div>
+</article>
+
+<article class="mt-5">
+  <div class="card w-100%">
+    <div class="card-body d-flex flex-row">
+
+
+      <div class="d-flex flex-column justify-content-ms-start">
+      <h5 class="card-title ms-4">Multi-Post Stories</h5>
+<ul class="list-inline-item">
+<li class="list-inline-item text-black">FACEBOOK</li>
+<li class="list-inline-item"><img src="./images/counter.png" alt="dot"/></li>
+<li class="list-inline-item text-black-50">Full Stack Dev</li>
+<li class="span list-inline-item"><img src="./images/counter.png" alt="dot"/></li>
+<li class="list-inline-item text-black-50">2015</li>
+</ul>
+      <p class="card-text ms-4">Experimental content creation feature that allows users to<br>
+        add to an existing story over the course of a day without<br>
+         spamming their friends.</p>
+         <ul class="list-inline-item">
+           <li class="list-inline-item"><img src="images/html.png" alt="html"></li>
+           <li class="list-inline-item"><img src="images/css.png" alt="css"></li>
+           <li class="list-inline-item"><img src="images/javascript.png" alt="js"></li>
+         </ul>
+      <button type="button" class="btn btn-primary col-4 ms-4">See project</button>
+        </div>
+        <img src="./images/snapshoot-portfolio.svg" alt="portfolio images4">
+    </div>
+
+  </div>
+</article>
+
 </section>
 
 
-
-
+<main>
       </main>
       <script src="js/bootstrap.css"></script>
    </body>
