fix index.html :card section

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,63 +13,156 @@
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet"/>
 </head>
-<main class="background-image background-color"></main>
-<header class="">
+
+<header class="bg-image">
+
+
   <nav class="nav nav-pills bg-light flex-column space-between flex-md-row">
   <a class="flex-sm-fill text-bg-light-sm-left p-3" aria-current="page" href="#">My Logo</a>
   <a class="flex-end-sm-fill text-bg-light-sm-right p-3"><img class="menu" src="./images/IconMenu.svg" alt="ham"></a>
 </nav>
-<section class="bg-light text-dark p-5 text-justify">
-  <div class="container">
-  <div>
-  <h1> I’m Andy<br> glad to see you!</h1>
-  </div>
-  <div>
-  <P class="lead">I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</P>
-  </div>
 
-  </div>
-<div class="h6 m-2" >LET'S CONNECT</div>
-<ul class="list-inline-item p-2">
-<li class="list-inline-item"><img src="./images/twitter.svg" alt="Twitter"/></li>
-<li class="list-inline-item"><img src="./images/linkedin.svg" alt="Linkedin"/></li>
-<li class="list-inline-item"><img src="./images/m.svg" alt="M"/></li>
-<li class="list-inline-item"><img src="./images/github.svg" alt="GitHub"/></li>
-<li class="list-inline-item"><img src="./images/vector.svg" alt="V"/></li>
+<div class="col cols-6 d-flex flex-column justify-content-start ms-5">
+<h1 class="row-2 h1 text-left">I'm Andy.<br>Glad to see you! </h1>
+<p class="row-3 p text-left">I’m a software developer! I can help you build a product , feature or website Look through<br>
+  some of my work and experience! If you like what you see and have a project you need<br> coded, don’t hestiate to contact me.</p>
+</div>
+<div class="h6 row-4 ms-5">LET'S CONNECT</div>
+<ul class="list-inline-item row-5 ms-2">
+<li class="list-inline-item ms-2"><img src="./images/twitter.svg" alt="Twitter"/></li>
+<li class="list-inline-item ms-2"><img src="./images/linkedin.svg" alt="Linkedin"/></li>
+<li class="list-inline-item ms-2"><img src="./images/m.svg" alt="M"/></li>
+<li class="list-inline-item ms-2"><img src="./images/github.svg" alt="GitHub"/></li>
+<li class="list-inline-item ms-2"><img src="./images/vector.svg" alt="V"/></li>
 </ul>
+
+
 </header>
 <body>
+
+
+
 <section class="container">
-<article class="col-lg-8">
-  <div class="card w-100">
-    <div class="card-body flex col">
-      <h5 class="card-title">Tonic</h5>
-<ul class="list-inline-item">
+<article class="mt-5">
+  <div class="card w-100%">
+    <div class="card-body d-flex flex-row">
+      <img src="./images/snapshoot-portfolio.svg" alt="portfolio images">
+
+      <div class="d-flex flex-column justify-content-ms-end">
+      <h5 class="card-title ms-4">Tonic</h5>
+<ul class="list-inline-itemt">
 <li class="list-inline-item text-black">CANOPY</li>
-<li class="span list-inline-item"><img src="./images/counter.png" alt="dot"/></li>
+<li class="list-inline-item"><img src="./images/counter.png" alt="dot"/></li>
 <li class="list-inline-item text-black-50">Back End Dev</li>
 <li class="span list-inline-item"><img src="./images/counter.png" alt="dot"/></li>
 <li class="list-inline-item text-black-50">2015</li>
 </ul>
-      <p class="card-text">A daily selection of privately personalized reads; no accounts<br>
+      <p class="card-text ms-4">A daily selection of privately personalized reads; no accounts<br>
          or sign-ups required.</p>
-      <a href="#" class="btn btn-primary">See project</a>
+         <ul class="list-inline-item">
+           <li class="list-inline-item"><img src="images/html.png" alt="html"></li>
+           <li class="list-inline-item"><img src="images/css.png" alt="css"></li>
+           <li class="list-inline-item"><img src="images/javascript.png" alt="js"></li>
+         </ul>
+      <button type="button" class="btn btn-primary col-4 ms-4">See project</button>
+        </div>
     </div>
   </div>
-
-
-
 </article>
+
+<article class="mt-5">
+  <div class="card w-100%">
+    <div class="card-body d-flex flex-row">
+
+
+      <div class="d-flex flex-column justify-content-ms-start">
+      <h5 class="card-title ms-4">Multi-Post Stories</h5>
+<ul class="list-inline-item">
+<li class="list-inline-item text-black">FACEBOOK</li>
+<li class="list-inline-item"><img src="./images/counter.png" alt="dot"/></li>
+<li class="list-inline-item text-black-50">Full Stack Dev</li>
+<li class="span list-inline-item"><img src="./images/counter.png" alt="dot"/></li>
+<li class="list-inline-item text-black-50">2015</li>
+</ul>
+      <p class="card-text ms-4">Experimental content creation feature that allows users to<br>
+        add to an existing story over the course of a day without<br>
+         spamming their friends.</p>
+         <ul class="list-inline-item">
+           <li class="list-inline-item"><img src="images/html.png" alt="html"></li>
+           <li class="list-inline-item"><img src="images/css.png" alt="css"></li>
+           <li class="list-inline-item"><img src="images/javascript.png" alt="js"></li>
+         </ul>
+      <button type="button" class="btn btn-primary col-4 ms-4">See project</button>
+        </div>
+        <img src="./images/snapshootportfolio4.png" alt="portfolio images2">
+    </div>
+
+  </div>
+</article>
+
+<article class="mt-5">
+  <div class="card w-100%">
+    <div class="card-body d-flex flex-row">
+      <img src="./images/snapshoot-portfolio.svg" alt="portfolio images3">
+
+      <div class="d-flex flex-column justify-content-ms-end">
+      <h5 class="card-title ms-4">Tonic</h5>
+<ul class="list-inline-itemt">
+<li class="list-inline-item text-black">CANOPY</li>
+<li class="list-inline-item"><img src="./images/counter.png" alt="dot"/></li>
+<li class="list-inline-item text-black-50">Back End Dev</li>
+<li class="span list-inline-item"><img src="./images/counter.png" alt="dot"/></li>
+<li class="list-inline-item text-black-50">2015</li>
+</ul>
+      <p class="card-text ms-4">A daily selection of privately personalized reads; no accounts<br>
+         or sign-ups required.</p>
+         <ul class="list-inline-item">
+           <li class="list-inline-item"><img src="images/html.png" alt="html"></li>
+           <li class="list-inline-item"><img src="images/css.png" alt="css"></li>
+           <li class="list-inline-item"><img src="images/javascript.png" alt="js"></li>
+         </ul>
+      <button type="button" class="btn btn-primary col-4 ms-4">See project</button>
+        </div>
+    </div>
+  </div>
+</article>
+
+<article class="mt-5">
+  <div class="card w-100%">
+    <div class="card-body d-flex flex-row">
+
+
+      <div class="d-flex flex-column justify-content-ms-start">
+      <h5 class="card-title ms-4">Multi-Post Stories</h5>
+<ul class="list-inline-item">
+<li class="list-inline-item text-black">FACEBOOK</li>
+<li class="list-inline-item"><img src="./images/counter.png" alt="dot"/></li>
+<li class="list-inline-item text-black-50">Full Stack Dev</li>
+<li class="span list-inline-item"><img src="./images/counter.png" alt="dot"/></li>
+<li class="list-inline-item text-black-50">2015</li>
+</ul>
+      <p class="card-text ms-4">Experimental content creation feature that allows users to<br>
+        add to an existing story over the course of a day without<br>
+         spamming their friends.</p>
+         <ul class="list-inline-item">
+           <li class="list-inline-item"><img src="images/html.png" alt="html"></li>
+           <li class="list-inline-item"><img src="images/css.png" alt="css"></li>
+           <li class="list-inline-item"><img src="images/javascript.png" alt="js"></li>
+         </ul>
+      <button type="button" class="btn btn-primary col-4 ms-4">See project</button>
+        </div>
+        <img src="./images/snapshoot-portfolio.svg" alt="portfolio images4">
+    </div>
+
+  </div>
+</article>
+
 </section>
 
 
-
-
-
-
+<main>
       </main>
-
-<script src="js/bootstrap.css"></script>
+      <script src="js/bootstrap.css"></script>
    </body>
 
 </html>
