fix index.html .2cardimgsize into styles.css

--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
                 See project
               </button>
             </div>
-            <img
-              src="./images/snapshootportfolio4.png"
+            <img class="card2imgsize"
+              src="./images/snapshoot-portfolio41.png"
               alt="portfolio images2"
             />
           </div>
